--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
     "feather-icons-react": "^1.0.0",
+    "motion": "^12.33.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwindcss": "^4.1.18"
